--- a/0base.html
+++ b/0base.html
@@ -4,7 +4,7 @@
 <head>
 	<title>유틸리티</title>
 	<meta charset="UTF-8" />
-    <link rel="stylesheet" href="0노블레스.css">
+    <link rel="stylesheet" href="0base.css">
 </head>
 <div class="topbox" id="topbox">
     <div class="button">
