--- a/0base.html
+++ b/0base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>유틸리티</title>
+	<title>서폿의기본</title>
 	<meta charset="UTF-8" />
     <link rel="stylesheet" href="0노블레스.css">
 </head>
