--- a/0서폿의정의.html
+++ b/0서폿의정의.html
@@ -26,13 +26,10 @@
 <div class="mainbox">
 
     <div class="box1">
-        <div class="box1-1"><img src="서폿의 정의1.jpeg"></div>
-        <div class="box1-2"><img src="서폿의 정의2.jpeg"></div>
-    </div>
-
-    <div class="box1-5">
-        <div class="box2-1"><img src="서폿의 정의3.jpeg"></div>
-        <div class="box2-2"><img src="서폿의 정의4.jpeg"></div>
+        <img src="서폿의 정의1.jpeg">
+        <img src="서폿의 정의2.jpeg">
+        <img src="서폿의 정의3.jpeg">
+        <img src="서폿의 정의4.jpeg">
     </div>
 
     <div class="box2">
